<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecipeSuggestor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="myRecipes">My Recipes</string>
    <string name="suggestRecipe">Suggest Recipe</string>
    <string name="title_activity_add_recipe">AddRecipe</string>
    <string name="title_activity_my_recipes">MyRecipes</string>
    <string name="title_activity_suggest_recipe">SuggestRecipe</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="title_activity_add_ingredients">AddIngredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_add_spices">AddSpices</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="Next">next</string>
    <string name="next">Next</string>
    <string name="addSpices">Add Spices</string>
    <string name="title_activity_recipe_preparing">RecipePreparing</string>
    <string name="createRecipe">Create Recipe</string>
    <string name="title_activity_recipe_details">RecipeDetails</string>
    <string name="howToPrepare">How To Prepare</string>
    <string name="spices">Spices</string>
    <string name="title_activity_how_to_prepare">HowToPrepare</string>
    <string name="myFavourites">My favourites</string>
    <string name="recipeName">Recipe Name</string>
    <string name="add">Add</string>
    <string name="enterIngredientHere">Enter your ingredient here</string>
    <string name="searchForRecipe">Search for recipe</string>
    <string name="toGallery">Gallery</string>
    <string name="preparing">Preparing</string>
    <string name="title_activity_recipes_gallery">RecipesGalleryActivity</string>
    <string name="newImage">New Image</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>
    <string name="addImageDescription">Add Image Description Here</string>

</resources>
