<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.stefan.recipesuggestor.RecipeDetailsActivity"
    android:background="@drawable/choppingboard"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/recipeDetailsNameId"
        style="@style/textViewStyle"
        android:background="@drawable/viewborder"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        style="@style/menuSectionsTextStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/recipeDetailsIngredientsId"
        style="@style/paperBackgroundStyle"
        android:layout_weight="0.48"
        android:background="@drawable/paper"
        android:gravity=""/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spices"
        style="@style/menuSectionsTextStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/recipeDetailsSpicesId"
        style="@style/paperBackgroundStyle"
        android:layout_weight="0.48"
        android:background="@drawable/paper"
        android:gravity=""/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howToPrepare"
        android:id="@+id/recipeDetailsPreparingBtnId"
        style="@style/buttonStyle"
        android:background="@drawable/buttonshape"/>
</LinearLayout>
